--- a/index.html
+++ b/index.html
@@ -1,11 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
+      integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <header class="header" id="header">
+      <a href="" class="logo">Sumeyye BALKAYA</a>
+
+      <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#project">Project</a>
+      </nav>
+    </header>
+
+    <section class="home" id="home">
+      <div class="home-content">
+        <h3>Hello I'm</h3>
+        <h1 class="name">Sumeyye Balkaya</h1>
+        <h3 class="title">And I'm a Fullstack Developer</h3>
+
+        <p class="info">
+          I'm a Jr. Full Stack Developer passionate about building dynamic and
+          user-friendly web applications. Currently, I specialize in frontend
+          development, with plans to dive deeper into the backend to enhance my
+          skills and create more robust solutions. I enjoy turning ideas into
+          functional and visually appealing digital experiences, and I thrive on
+          learning new technologies to stay ahead in this ever-evolving field.
+          Feel free to explore my projects.
+        </p>
+        <div class="social-media">
+          <a href="" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="" target="_blank">
+            <i class="fa-brands fa-medium"></i>
+          </a>
+          <a href="" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+        <a href="" class="btn">Download CV</a>
+      </div>
+      <div class="home-img">
+        <img src="./images/sumeyye.png.jpg" alt="" />
+      </div>
+    </section>
+
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="./images/sumeyye.png.jpg" alt="" />
+      </div>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Full-Stack Instructor</h3>
+        <p>
+          As a Jr. Full Stack Developer with a focus on frontend development, I
+          have a strong foundation in building responsive and interactive user
+          interfaces. I work confidently with HTML5, CSS3, and JavaScript
+          (ES6+), creating well-structured and accessible web pages. In terms of
+          styling, I am skilled in using Bootstrap and custom CSS to design
+          clean and modern interfaces. I also prioritize creating responsive
+          designs that provide seamless experiences across different devices,
+          leveraging techniques like Flexbox, Grid, and media queries. Version
+          control is an essential part of my workflow, and I utilize Git and
+          GitHub to collaborate efficiently on projects. I'm always eager to
+          learn and explore modern frontend technologies to enhance my skill set
+          and deliver top-notch user experiences.
+        </p>
+      </div>
+    </section>
+
+    <section class="skills" id="skills">
+      <h2 class="heading">My <span>Skills</span></h2>
+      <div class="skills-container">
+        <div class="skills-box">
+          <i class="fa-solid fa-code"></i>
+          <h3>HTML</h3>
+          <p>
+            HTML (HyperText Markup Language) is the foundational language used
+            to create web pages. It defines the structure and layout of web
+            content, allowing browsers to display text, images, links, forms,
+            and other media. HTML uses tags to mark up elements within a
+            webpage, which browsers interpret to render the content correctly.
+          </p>
+        </div>
+        <div class="skills-box">
+          <i class="fa-brands fa-css3"></i>
+          <h3>CSS</h3>
+          <p>
+            CSS (Cascading Style Sheets) is a style sheet language used to
+            define the look and layout of a web page. It controls the
+            presentation of HTML elements, allowing developers to style the
+            content with colors, fonts, spacing, positioning, and more. CSS
+            separates content from design, making it easier to maintain and
+            update the appearance of a website.
+          </p>
+        </div>
+        <div class="skills-box">
+          <i class="fa-brands fa-js"></i>
+          <h3>JavaScript</h3>
+          <p>
+            JavaScript is a high-level, dynamic programming language used to
+            create interactive and dynamic content on websites. It enables web
+            developers to add behaviors to web pages, such as animations, form
+            validation, interactive maps, and much more. JavaScript runs in the
+            browser, making it essential for client-side scripting.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="projects" id="projects">
+      <h2 class="heading">Latest <span>Project</span></h2>
+      <div class="projects-container">
+        <div class="projects-box">
+          <img src="./images/project1.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">HTML Projects</a>
+          </p>
+        </div>
+        <div class="projects-box">
+          <img src="./images/project2.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">CSS Projects</a>
+          </p>
+        </div>
+        <div class="projects-box">
+          <img src="./images/project3.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">REACT Projects</a>
+          </p>
+        </div>
+        <div class="projects-box">
+          <img src="./images/project1.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">SASS Projects</a>
+          </p>
+        </div>
+        <div class="projects-box">
+          <img src="./images/project1.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">BOOTSTRAP Projects</a>
+          </p>
+        </div>
+        <div class="projects-box">
+          <img src="./images/project1.jpg.webp" alt="" />
+          <p class="pro">
+            <a href="#">JAVASCRİPT Projects</a>
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
