--- a/index.html
+++ b/index.html
@@ -165,5 +165,14 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright ©️ 2024 by Sumeyye BALKAYA | All Right Reserved.</p>
+      </div>
+      <div class="footer-iconTop">
+        <a href="" class="#home"><i class="fa fa-arrow-circle-up"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
