--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
@@ -21,7 +21,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
-        <a href="#project">Project</a>
+        <a href="#projects">Project</a>
       </nav>
     </header>
 
@@ -41,16 +41,16 @@
           Feel free to explore my projects.
         </p>
         <div class="social-media">
-          <a href="" target="_blank">
+          <a href="https://www.linkedin.com/in/sumeyyebalkaya/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
-          <a href="" target="_blank">
+          <a href="https://github.com/SumeyyeB" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="" target="_blank">
+          <a href="https://medium.com/@sumeyyebalkaya" target="_blank">
             <i class="fa-brands fa-medium"></i>
           </a>
-          <a href="" target="_blank">
+          <a href="https://www.instagram.com/sumeyyeblky/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </div>
